Add styles Home

--- a/index.html
+++ b/index.html
@@ -421,7 +421,7 @@
     </section>
 
     <section id="reading-tracker">
-        <h1>Progreso de Lectura</h1>
+        <h2>Progreso de Lectura</h2>
         <p>Aquí puedes seguir tu progreso de lectura:</p>
         <div class="libro-lista">
             <div class="libro">
@@ -468,38 +468,40 @@
     </section>
 
     <section id="buy-books">
-            <h1>Aliados</h1>
-            <p>Aquí tienes algunas empresas donde puedes comprar libros:</p>
-            <ul class="libro-lista">
-                <li>
-                    <a href="https://www.amazon.com" target="_blank">Amazon</a> - Una de las mayores librerías en línea con una amplia selección de libros.
-                    <button class="comprar-btn"><a href="https://www.amazon.com" target="_blank">Comprar</a></button>
-                </li>
-                <li>
-                    <a href="https://www.casadellibro.com" target="_blank">Casa del Libro</a> - Librería española con una extensa colección de libros en diversos géneros.
-                    <button class="comprar-btn"><a href="https://www.casadellibro.com" target="_blank">Comprar</a></button>
-                </li>
-                <li>
-                    <a href="https://www.fnac.es" target="_blank">Fnac</a> - Tienda de electrónica y libros, con una variedad de títulos disponibles.
-                    <button class="comprar-btn"><a href="https://www.fnac.es" target="_blank">Comprar</a></button>
-                </li>
-                <li>
-                    <a href="https://www.libreriacortes.com" target="_blank">Librería Cortés</a> - Librería en línea con una buena selección de libros en español.
-                    <button class="comprar-btn"><a href="https://www.libreriacortes.com" target="_blank">Comprar</a></button>
-                </li>
-                <li>
-                    <a href="https://www.libreriacapitol.com" target="_blank">Librería Capitol</a> - Especializada en libros de texto y literatura general.
-                    <button class="comprar-btn"><a href="https://www.libreriacapitol.com" target="_blank">Comprar</a></button>
-                </li>
-                <li>
-                    <a href="https://www.libreriakarma.com" target="_blank">Librería Karma</a> - Conocida por su selección de libros de autoayuda y desarrollo personal.
-                    <button class="comprar-btn"><a href="https://www.libreriakarma.com" target="_blank">Comprar</a></button>
-                </li>
-                <li>
-                    <a href="https://www.libreriacatedral.com" target="_blank">Librería Catedral</a> - Ofrece una amplia gama de literatura y títulos académicos.
-                    <button class="comprar-btn"><a href="https://www.libreriacatedral.com" target="_blank">Comprar</a></button>
-                </li>
-            </ul>
+            <h2>Aliados</h2>
+            <p>Aquí tienes algunas empresas donde puedes comprar libros</p>
+            <div class="slider-buy">
+                <ul class="libro-lista">
+                    <li>
+                        <a href="https://www.amazon.com" target="_blank">Amazon</a> - Una de las mayores librerías en línea con una amplia selección de libros.
+                        <button class="comprar-btn"><a href="https://www.amazon.com" target="_blank">Comprar</a></button>
+                    </li>
+                    <li>
+                        <a href="https://www.casadellibro.com" target="_blank">Casa del Libro</a> - Librería española con una extensa colección de libros en diversos géneros.
+                        <button class="comprar-btn"><a href="https://www.casadellibro.com" target="_blank">Comprar</a></button>
+                    </li>
+                    <li>
+                        <a href="https://www.fnac.es" target="_blank">Fnac</a> - Tienda de electrónica y libros, con una variedad de títulos disponibles.
+                        <button class="comprar-btn"><a href="https://www.fnac.es" target="_blank">Comprar</a></button>
+                    </li>
+                    <li>
+                        <a href="https://www.libreriacortes.com" target="_blank">Librería Cortés</a> - Librería en línea con una buena selección de libros en español.
+                        <button class="comprar-btn"><a href="https://www.libreriacortes.com" target="_blank">Comprar</a></button>
+                    </li>
+                    <li>
+                        <a href="https://www.libreriacapitol.com" target="_blank">Librería Capitol</a> - Especializada en libros de texto y literatura general.
+                        <button class="comprar-btn"><a href="https://www.libreriacapitol.com" target="_blank">Comprar</a></button>
+                    </li>
+                    <li>
+                        <a href="https://www.libreriakarma.com" target="_blank">Librería Karma</a> - Conocida por su selección de libros de autoayuda y desarrollo personal.
+                        <button class="comprar-btn"><a href="https://www.libreriakarma.com" target="_blank">Comprar</a></button>
+                    </li>
+                    <li>
+                        <a href="https://www.libreriacatedral.com" target="_blank">Librería Catedral</a> - Ofrece una amplia gama de literatura y títulos académicos.
+                        <button class="comprar-btn"><a href="https://www.libreriacatedral.com" target="_blank">Comprar</a></button>
+                    </li>
+                </ul>
+            </div>
     </section>
     <section id="our-team">
         <h2>Nosotros</h2>
