Add styles header, footer and sections: Stories, StarBooks, Books, Buy books, Our team

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
 
 <header>
-    <nav>
+    <nav id="navegation-menu">
         <div class="">
             <a href="/">
                 <img src="/favicon/bookmarks.svg" 
@@ -463,7 +463,7 @@
 
     <section id="buy-books">
             <h2>Aliados</h2>
-            <p>Empresas con las que contribuimos donde puedes comprar libros.</p>
+            <p class="">Empresas con las que contribuimos donde puedes comprar libros.</p>
             <div class="slider-buy">
                 <ul class="libro-lista">
                     <li>
