--- a/index.html
+++ b/index.html
@@ -31,23 +31,23 @@
             <a href="#" id="loginBtn">
                 <svg  xmlns="http://www.w3.org/2000/svg"  width="24"  height="24"  viewBox="0 0 24 24"  fill="none"  stroke="currentColor"  stroke-width="2"  stroke-linecap="round"  stroke-linejoin="round"  class="icon icon-tabler icons-tabler-outline icon-tabler-user"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M8 7a4 4 0 1 0 8 0a4 4 0 0 0 -8 0" /><path d="M6 21v-2a4 4 0 0 1 4 -4h4a4 4 0 0 1 4 4v2" /></svg>
             </a>
-            <a href="#our-team">
-                <li class="item-menu" id="about-us">Nosotros<img src="/img/line.png" 
-                    alt="">
-                </li>
-            </a>
             <a href="#books">
                 <li class="item-menu">Leer<img src="/img/line.png" 
                     alt="">
                 </li>
             </a>
             <a href="#starbooks">
-                <li class="item-menu">Tendencia<img src="/img/line.png" 
+                <li class="item-menu">Libros Tendencia<img src="/img/line.png" 
                     alt="">
                 </li>
             </a>
             <a href="#buy-books">
                 <li class="item-menu">Comprar<img src="/img/line.png" 
+                    alt="">
+                </li>
+            </a>
+            <a href="#our-team">
+                <li class="item-menu" id="about-us">Nosotros<img src="/img/line.png" 
                     alt="">
                 </li>
             </a>
@@ -104,8 +104,8 @@
 
 <section id="stories">
     <div class="filter"></div>
-    <h2><em>TRANSFORMATE</em></h2>
-    <p>Has cambios significativos en tu vida  y logra liberar tu 100%.</p>
+    <h2><em>TRANS<span>FÓRMATE</span></em></h2>
+    <!-- <p>Has cambios significativos en tu vida  y logra liberar tu 100%.</p> -->
     <div class="slider-stories">
         <div class="stories-wrapper">
             <div class="container-stories">
@@ -473,12 +473,12 @@
                     </li>
                     <li>
                         <a href="https://www.casadellibro.com" target="_blank"><h2>Casa del Libro</h2> <p>Librería española con una extensa colección de libros en diversos géneros.</p>
-                        <img src="/img/Aliados/amazon.png" 
+                        <img src="https://www.casadellibro.com.co/img/cabecera/CDL-LogoSecundario-RGB.svg" 
                         alt=""></a>
                     </li>
                     <li>
-                        <a href="https://www.fnac.es" target="_blank"><h2>Fnac</h2> <p>Tienda de electrónica y libros, con una variedad de títulos disponibles.</p>
-                        <img src="/img/Aliados/amazon.png" 
+                        <a href="https://www.fnac.es" target="_blank"><h2>Panamericana</h2> <p>Tienda de electrónica y libros, con una variedad de títulos disponibles.</p>
+                        <img src="https://panamericana.vtexassets.com/arquivos/logo-panamericana-sin-fondo.svg" 
                         alt=""></a>
                     </li>
                     <li>
@@ -505,8 +505,8 @@
             </div>
     </section>
     <section id="our-team">
-        <h2>Nosotros</h2>
-        <p>Somos un equipo que trabaja para hacer el conocimiento accesible, inspirar y transformar a los lectores en sus mejores versiones.</p>
+        <h2>Somos</h2>
+        <p>Un equipo que trabaja para hacer el conocimiento accesible, inspirar y transformar a los lectores en sus mejores versiones.</p>
         <div class="">
         <svg  xmlns="http://www.w3.org/2000/svg"  width="100"  height="100"  viewBox="0 0 24 24"  fill="currentColor"  class="icon icon-tabler icons-tabler-filled icon-tabler-book"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M12.088 4.82a10 10 0 0 1 9.412 .314a1 1 0 0 1 .493 .748l.007 .118v13a1 1 0 0 1 -1.5 .866a8 8 0 0 0 -8 0a1 1 0 0 1 -1 0a8 8 0 0 0 -7.733 -.148l-.327 .18l-.103 .044l-.049 .016l-.11 .026l-.061 .01l-.117 .006h-.042l-.11 -.012l-.077 -.014l-.108 -.032l-.126 -.056l-.095 -.056l-.089 -.067l-.06 -.056l-.073 -.082l-.064 -.089l-.022 -.036l-.032 -.06l-.044 -.103l-.016 -.049l-.026 -.11l-.01 -.061l-.004 -.049l-.002 -.068v-13a1 1 0 0 1 .5 -.866a10 10 0 0 1 9.412 -.314l.088 .044l.088 -.044z" /></svg>
         <svg  xmlns="http://www.w3.org/2000/svg"  width="100"  height="100"  viewBox="0 0 24 24"  fill="currentColor"  class="icon icon-tabler icons-tabler-filled icon-tabler-star"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M8.243 7.34l-6.38 .925l-.113 .023a1 1 0 0 0 -.44 1.684l4.622 4.499l-1.09 6.355l-.013 .11a1 1 0 0 0 1.464 .944l5.706 -3l5.693 3l.1 .046a1 1 0 0 0 1.352 -1.1l-1.091 -6.355l4.624 -4.5l.078 -.085a1 1 0 0 0 -.633 -1.62l-6.38 -.926l-2.852 -5.78a1 1 0 0 0 -1.794 0l-2.853 5.78z" /></svg>
