--- a/html/foroblog.html
+++ b/html/foroblog.html
@@ -5,15 +5,55 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Feelty ­· ForoBlog</title>
     <link rel="stylesheet" href="/css/foroblog.css">
+    <link rel="icon" type="img/svg+xml" href="/favicon/clover.svg">
 </head>
 <body>
     <header>
 
         <input type="text" placeholder="Buscar un libro">
     </header>
+
+    <div id="categories">
+        <ul><h2>Libros X Genero</h2>
+            <li>Elemento 1</li>
+            <li>Elemento 2</li>
+            <li>Elemento 3</li>
+            <li>Elemento 4</li>
+            <li>Elemento 5</li>
+            <li>Elemento 6</li>
+            <li>Elemento 7</li>
+            <li>Elemento 8</li>
+            <li>Elemento 9</li>
+            <li>Elemento 10</li>
+            <li>Elemento 11</li>
+            <li>Elemento 12</li>
+            <li>Elemento 13</li>
+            <li>Elemento 14</li>
+        </ul>
+        <ul><h2>Más comentados</h2>
+            <li>Elemento 1</li>
+            <li>Elemento 2</li>
+            <li>Elemento 3</li>
+            <li>Elemento 4</li>
+            <li>Elemento 5</li>
+            <li>Elemento 6</li>
+            <li>Elemento 7</li>
+            <li>Elemento 8</li>
+        </ul>
+        <ul><h2>Recomendados</h2>
+            <li>Elemento 1</li>
+            <li>Elemento 2</li>
+            <li>Elemento 3</li>
+            <li>Elemento 4</li>
+            <li>Elemento 5</li>
+            <li>Elemento 6</li>
+            <li>Elemento 7</li>
+            <li>Elemento 8</li>
+        </ul>
+        
+    </div>
     <div id="landing-page">
         <h1>ForoBlog Feelty</h1>
-        <p>Busca un libro</p>
     </div>
     <main>
         
