Fixer images logos

--- a/public/index.html
+++ b/public/index.html
@@ -67,7 +67,7 @@
     <nav id="navegation-menu">
         <div class="">
             <a href="/">
-                <img src="/favicon/bookmarks.svg" 
+                <img src="/public/favicon/bookmarks.svg" 
                 alt="logo">
                 Feelty
             </a>
@@ -615,7 +615,7 @@
         <a href="/html/rules.html"><button>Politicas de privacidad</button></a>
         <p>&copy; 2024 Feelty ­· Todos los derechos reservados.</p>
       </div>
-      <a href="/"><img src="/favicon/bookmarks.svg" 
+      <a href="/"><img src="/public/favicon/bookmarks.svg" 
         alt="logo"></a>
 </footer>
 
