Add link landing

--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-<a href="/feelty/public/index.html"></a>
+<!DOCTYPE html>
+<html>
+<head>
+    <meta http-equiv="refresh" content="0; url=/public/index.html" />
+    <title>Redirection</title>
+</head>
+<body>
+    <a href="public/index.html"></a>
+</body>
+</html>
