--- a/public/index.html
+++ b/public/index.html
@@ -19,25 +19,31 @@
 
 <!-- Auth -->
  <section id="login-acc">
-    <h2>Registro</h2>
-    <form id="registerForm">
-        <label for="registerUsername">Usuario:</label>
-        <input type="email" id="registerUsername" placeholder="correo" required>
-        <label for="registerPassword">Contraseña:</label>
-        <input type="password" id="registerPassword" required>
-        <button type="submit">Registrarse</button>
-    </form>
-    <div id="registerMessage"></div>
-
-    <h2>Login</h2>
-    <form id="loginForm">
-        <label for="loginUsername">Usuario:</label>
-        <input type="email" id="loginUsername" placeholder="correo registrado" required>
-        <label for="loginPassword">Contraseña:</label>
-        <input type="password" id="loginPassword" required>
-        <button type="submit">Iniciar sesión</button>
-    </form>
-    <div id="loginMessage"></div>
+    <div id="container-register">
+        <span id="btn-close-register" class="btn-close-nestletter color-btn">&times;</span>
+        <h2>Registro</h2>
+        <form id="registerForm">
+            <label for="registerUsername">Usuario:</label>
+            <input type="email" id="registerUsername" placeholder="correo" required>
+            <label for="registerPassword">Contraseña:</label>
+            <input type="password" id="registerPassword" required>
+            <button type="submit">Registrarse</button>
+        </form>
+        <div id="registerMessage"></div>
+    </div>
+    <div id="container-login">
+        <span id="btn-close-login" class="btn-close-nestletter color-btn">&times;</span>
+        <h2>Login</h2>
+        <form id="loginForm">
+            <label for="loginUsername">Usuario:</label>
+            <input type="email" id="loginUsername" placeholder="correo registrado" required>
+            <label for="loginPassword">Contraseña:</label>
+            <input type="password" id="loginPassword" required>
+            <button type="submit">Iniciar sesión</button>
+            <button id="btn-register">Registrarse</button>
+        </form>
+        <div id="loginMessage"></div>
+    </div>
 </section>
 
 
