--- a/public/index.html
+++ b/public/index.html
@@ -509,7 +509,7 @@
         <div class="footer-links">
           <h4>Bussines</h4>
           <ul>
-            <li><a href="#">Contacto</a></li>
+            <li><a href="mailto:hello@feelty.com">hello@feelty.com</a></li>
           </ul>
         </div>
     
